--- a/notebooks/prototipo_1.ipynb
+++ b/notebooks/prototipo_1.ipynb
@@ -155,9 +155,24 @@
     "    '9.2 Selecciona el rango aproximado de ingresos totales que obtuvo tu organización/colectivo/iniciativa (incluyendo donativos y otros tipos de ingreso) en el último año aplicable inmediato (en pesos)': 'annual_income',\n",
     "    '11.1 Selecciona el número de integrantes con nómina o remunerados económicamente con los que cuenta la organización/colectivo/iniciativa al día de hoy:': 'employee_count',\n",
     "    '11.2 Selecciona el número de personas voluntarias totales (recurrentes o esporádicos) que la organización/colectivo/iniciativa tuvo en el año 2022:': 'volunteer_count',\n",
-    "    '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 1. Fin de la pobreza.]': 'odss',\n",
-    "    '4. Indica cuáles son las 3 principales actividades que realiza tu organización/colectivo/iniciativa': 'main_activities',\n",
-    "    'Unnamed: 199': 'target_demographics_and_profiles', '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organizaciÃ³n/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 1. Fin de la pobreza.]':'ODS 1', '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 2. Hambre cero.]':'ODS 2','11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 3. Salud y bienestar.]':'ODS 3', '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 4. EducaciÃ³n de calidad.]':'ODS 4', '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 5. Igualdad de género.]':'ODS 5', '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 6. Agua limpia y saneamiento.]':'ODS 6', '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 7. Energía asequible y no contaminante]': 'ODS 7', '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 8. Trabajo decente y crecimiento económico.]':'ODS 8','11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 9. industria, innovación e infraestructura.]':'ODS 9', '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 10. Reducción de las desigualdades.]':'ODS 10', '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 11. Ciudades y comunidades sostenibles.]':'ODS 11', '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 12. Producción y consumo responsables.]': 'ODS 12', '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 13. Acción por el clima.]':'ODS 13', '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 14. Vida submarina.]': 'ODS 14', '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 15. Vida de ecosistemas terrestres.]':'ODS 15', '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 16. Paz, justicia e instituciones solidas.]':'ODS 16', '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 17. Alianzas para lograr los objetivos.]':'ODS 17'\n",
+    "    'Unnamed: 199': 'target_demographics_and_profiles',\n",
+    "    '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organizaciÃ³n/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 1. Fin de la pobreza.]': 'ODS 1',\n",
+    "    '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 2. Hambre cero.]': 'ODS 2',\n",
+    "    '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 3. Salud y bienestar.]': 'ODS 3',\n",
+    "    '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 4. Educación de calidad.]': 'ODS 4',\n",
+    "    '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 5. Igualdad de género.]': 'ODS 5',\n",
+    "    '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 6. Agua limpia y saneamiento.]': 'ODS 6',\n",
+    "    '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 7. Energía asequible y no contaminante]': 'ODS 7',\n",
+    "    '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 8. Trabajo decente y crecimiento económico.]': 'ODS 8',\n",
+    "    '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 9. industria, innovación e infraestructura.]': 'ODS 9',\n",
+    "    '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 10. Reducción de las desigualdades.]': 'ODS 10',\n",
+    "    '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 11. Ciudades y comunidades sostenibles.]': 'ODS 11',\n",
+    "    '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 12. Producción y consumo responsables.]': 'ODS 12',\n",
+    "    '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 13. Acción por el clima.]': 'ODS 13',\n",
+    "    '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 14. Vida submarina.]': 'ODS 14',\n",
+    "    '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 15. Vida de ecosistemas terrestres.]': 'ODS 15',\n",
+    "    '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 16. Paz, justicia e instituciones solidas.]': 'ODS 16',\n",
+    "    '11.3 Indica los 3 principales Objetivos de Desarrollo Sostenible (ODS) de la Agenda 2030 de la ONU a los que contribuye la organización/colectivo/iniciativa (siendo el 1 el más relevante): [ODS 17. Alianzas para lograr los objetivos.]': 'ODS 17'\n",
     "}, inplace=True)\n",
     "survey_answers = survey_answers.dropna(subset='name')\n",
     "survey_answers"
@@ -333,10 +348,12 @@
     "            print(f'missing category: {value}')\n",
     "\n",
     "organization_demographics = pd.DataFrame(data=demographic_data)\n",
-    "organization_demographics['demographic'] = organization_demographics['demographic'].astype(pd.CategoricalDtype(categories=demographic_categories))\n",
+    "organization_demographics['demographic'] = organization_demographics['demographic'].astype(\n",
+    "    pd.CategoricalDtype(categories=demographic_categories))\n",
     "\n",
     "organization_profiles = pd.DataFrame(data=profile_data)\n",
-    "organization_profiles['profile'] = organization_profiles['profile'].astype(pd.CategoricalDtype(categories=profile_categories))\n",
+    "organization_profiles['profile'] = organization_profiles['profile'].astype(\n",
+    "    pd.CategoricalDtype(categories=profile_categories))\n",
     "\n",
     "organization_demographics"
    ],
@@ -389,7 +406,8 @@
    "source": [
     "organizations = survey_answers.filter(\n",
     "    items=['name', 'legal_incorporation_year', 'start_of_operations_year', 'annual_income', 'employee_count',\n",
-    "           'volunteer_count', 'ODS 1', 'ODS 2', 'ODS 3', 'ODS 4', 'ODS 5', 'ODS 6', 'ODS 7', 'ODS 8', 'ODS 9', 'ODS 10', 'ODS 11', 'ODS 12', 'ODS 13', 'ODS 14', 'ODS 15', 'ODS 16', 'ODS 17',])\n",
+    "           'volunteer_count', 'ODS 1', 'ODS 2', 'ODS 3', 'ODS 4', 'ODS 5', 'ODS 6', 'ODS 7', 'ODS 8', 'ODS 9', 'ODS 10',\n",
+    "           'ODS 11', 'ODS 12', 'ODS 13', 'ODS 14', 'ODS 15', 'ODS 16', 'ODS 17', ])\n",
     "\n",
     "employee_count_categories = [\n",
     "    '0',\n",
@@ -422,12 +440,15 @@
     "    'más de 5,000,000',\n",
     "]\n",
     "\n",
-    "organizations['annual_income'] = organizations['annual_income'].astype(pd.CategoricalDtype(categories=annual_income_categories, ordered=True))\n",
-    "print (organizations['annual_income'].cat)\n",
+    "organizations['annual_income'] = organizations['annual_income'].astype(\n",
+    "    pd.CategoricalDtype(categories=annual_income_categories, ordered=True))\n",
+    "print(organizations['annual_income'].cat)\n",
     "\n",
-    "organizations['volunteer_count'] = organizations['volunteer_count'].astype(pd.CategoricalDtype(categories=volunteer_count_categories, ordered=True))\n",
+    "organizations['volunteer_count'] = organizations['volunteer_count'].astype(\n",
+    "    pd.CategoricalDtype(categories=volunteer_count_categories, ordered=True))\n",
     "\n",
-    "organizations['employee_count'] = organizations['employee_count'].astype(pd.CategoricalDtype(categories=employee_count_categories, ordered=True))\n",
+    "organizations['employee_count'] = organizations['employee_count'].astype(\n",
+    "    pd.CategoricalDtype(categories=employee_count_categories, ordered=True))\n",
     "\n",
     "organizations"
    ],
